# Back-End-Padaria-FastAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7bd45697e6e4_criacao_real_das_tabelas.py  cbcd1bc0316e_criacao_inicial.py  f6f4b60140c3_agora_vai.py
app/: database.py  main.py
app/auth/: dependencies.py  hashing.py  jwt.py
app/models/: __init__.py  cliente.py  ingrediente.py  pedido.py  produto.py  usuario.py
app/routers/: auth.py  clientes.py  ingredientes.py  pedidos.py  produtos.py
app/schemas/: cliente.py  ingrediente.py  pedido.py  produto.py  usuario.py
